--- a/.gitignore
+++ b/.gitignore
@@ -10,8 +10,6 @@ Homestead.json
 Homestead.yaml
 npm-debug.log
 yarn-error.log
-.idea/php.xml
-.idea/todolist.iml
 .php_cs.cache
 .rnd
-.idea
+.idea/
